@@ -213,4 +213,29 @@ class TestDirectoryApp(unittest.TestCase):
 
     def test_must_serve_directory(self):
         serve_path = create_file('abcde', self.test_dir, 'bar')
-        self.assertRaises(AssertionError, static.DirectoryApp, serve_path)
+        self.assertRaises(IOError, static.DirectoryApp, serve_path)
+
+    def test_index_page(self):
+        os.mkdir(os.path.join(self.test_dir, 'index-test'))
+        create_file(bytes_('index'), self.test_dir, 'index-test', 'index.html')
+        app = static.DirectoryApp(self.test_dir)
+        resp = get_response(app, '/index-test')
+        self.assertEqual(resp.status_code, 301)
+        self.assertTrue(resp.location.endswith('/index-test/'))
+        resp = get_response(app, '/index-test?test')
+        self.assertTrue(resp.location.endswith('/index-test/?test'))
+        resp = get_response(app, '/index-test/')
+        self.assertEqual(resp.status_code, 200)
+        self.assertEqual(resp.body, bytes_('index'))
+        self.assertEqual(resp.content_type, 'text/html')
+        resp = get_response(app, '/index-test/index.html')
+        self.assertEqual(resp.status_code, 200)
+        self.assertEqual(resp.body, bytes_('index'))
+        redir_app = static.DirectoryApp(self.test_dir, hide_index_with_redirect=True)
+        resp = get_response(redir_app, '/index-test/index.html')
+        self.assertEqual(resp.status_code, 301)
+        self.assertTrue(resp.location.endswith('/index-test/'))
+        resp = get_response(redir_app, '/index-test/index.html?test')
+        self.assertTrue(resp.location.endswith('/index-test/?test'))
+        page_app = static.DirectoryApp(self.test_dir, index_page='something-else.html')
+        self.assertEqual(get_response(page_app, '/index-test/').status_code, 404)
